aws-fargate/supervisory.tf
# ecs.tf

# ata "template_file" "supervisory" {
#     template = file("./templates/ecs/supervisory.json.tpl")

#     vars = {
#         app_image      = "rlmariz/remote-learning-supervisory:latest"
#         app_port       = "3000"
#         fargate_cpu    = var.fargate_cpu
#         fargate_memory = var.fargate_memory
#         aws_region     = var.aws_region
#     }
# }

# resource "aws_ecs_task_definition" "supervisory" {
#     family                   = "supervisory-task"
#     execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn
#     network_mode             = "awsvpc"
#     requires_compatibilities = ["FARGATE"]
#     cpu                      = var.fargate_cpu
#     memory                   = var.fargate_memory
#     container_definitions    = data.template_file.supervisory.rendered
# }

# resource "aws_ecs_service" "supervisory" {
#     name            = "supervisory-servic"
#     cluster         = aws_ecs_cluster.main.id
#     task_definition = aws_ecs_task_definition.supervisory.arn
#     desired_count   = var.app_count
#     launch_type     = "FARGATE"

#     network_configuration {
#         security_groups  = [aws_security_group.ecs_tasks.id]
#         subnets          = aws_subnet.private.*.id
#         assign_public_ip = true
#     }

#     load_balancer {
#         target_group_arn = aws_alb_target_group.app.id
#         container_name   = "supervisory"
#         container_port   = "3000"
#     }

#     depends_on = [aws_alb_listener.front_end, aws_iam_role_policy_attachment.ecs-task-execution-role-policy-attachment]
# }
